styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  @apply bg-background;
  padding-bottom: 300px;
}

/* Swiper */
:root {
  --swiper-navigation-color: white;
}
span.swiper-pagination-bullet.swiper-pagination-bullet {
  background-color: white;
  width: 16px;
  height: 16px;
  border-radius: 2rem;
  transition: all 0.25s ease-in-out;
}
span.swiper-pagination-bullet.swiper-pagination-bullet-active {
  width: 32px;
}

/* Nice Dates */
@media screen and (max-width: 768px) {
  .nice-dates-popover {
    right: 0;
  }
}

@layer components {
  .btn {
    @apply rounded-full transition ease-in-out duration-200 hover:opacity-80 whitespace-nowrap;
  }

  .btn-large {
    @apply px-6 py-3;
  }

  .btn-small {
    @apply px-4 py-2;
  }

  .btn-block {
    @apply w-full;
  }

  .btn-grow {
    @apply grow;
  }

  .btn-primary {
    @apply btn bg-black text-white;
  }

  .btn-secondary {
    @apply btn bg-white text-black;
  }

  .input {
    @apply bg-white border border-black border-solid rounded-full px-6 py-3 outline-none w-full;
  }

  .input-disabled {
    @apply opacity-50;
  }

  .input-error {
    @apply border-red placeholder:text-red-400;
  }

  .input-textarea {
    @apply rounded-2xl;
  }
}

